tests/parser/fail/super-param-kw.som
"test:
failMessage:
  - contains: define
  - contains: super
"

SuperParamKw = (
  test: super makes: errors = ('yes')
)
